<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/txt_order"
        android:layout_width="156dp"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:background="@drawable/table_header_cell"
        android:text="@string/prompt_order_no"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txt_due_date"
        android:layout_width="260dp"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:background="@drawable/table_header_cell"
        android:text="@string/prompt_due_date"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txt_name"
        android:layout_width="124dp"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:background="@drawable/table_header_cell"
        android:text="@string/prompt_buyer_name"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txt_address"
        android:layout_width="128dp"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:background="@drawable/table_header_cell"
        android:text="@string/prompt_address"
        android:textAlignment="center"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txt_phone"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:background="@drawable/table_header_cell"
        android:text="@string/prompt_phone"
        android:textAlignment="center"
        android:textSize="18sp" />
    <TextView
        android:id="@+id/txt_order_total"
        android:layout_width="128dp"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:background="@drawable/table_header_cell"
        android:text="@string/prompt_total"
        android:textAlignment="center"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txt_location"
        android:layout_width="128dp"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:background="@drawable/table_header_cell"
        android:text="@string/prompt_gps"
        android:textAlignment="center"
        android:textSize="18sp" />

</LinearLayout>