<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialogue_background">

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:padding="@dimen/fourty_dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/twenty_dp"
            android:text="@string/action_delete"
            android:textColor="@color/white"
            android:textSize="@dimen/eighteen_sp"
            android:id="@+id/rb_english"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/twenty_dp"
            android:text="@string/action_edit"
            android:textColor="@color/white"
            android:textSize="@dimen/eighteen_sp"
            android:id="@+id/rb_arabic"/>


    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_below="@+id/radio_group"
        android:weightSum="4">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/btn_hash"
            android:textColor="@color/white"
            android:text="@string/cancel"
            android:layout_weight="2"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            />

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_white"
            android:textColor="@color/black"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:layout_weight="2"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/action_ok"/>

    </LinearLayout>

</RelativeLayout>