<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_activity"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/image_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/twenty_dp"
        android:src="@drawable/ic_login_header" />

    <LinearLayout
        android:id="@+id/text_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_header"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/twenty_dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="@dimen/ten_dp"
            android:text="@string/header_login"
            android:textColor="@color/white"
            android:textSize="@dimen/twenty_five_sp" />

        <TextView
            android:id="@+id/text_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prompt_error"
            android:textColor="@color/rb_red"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/pane_username"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/text_header"
        android:layout_margin="@dimen/twenty_dp"
        android:background="@drawable/et_background"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/ten_dp"
            android:layout_marginRight="@dimen/ten_dp"
            android:src="@drawable/ic_person_black_24dp" />


        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fifty_dp"
            android:background="@android:color/transparent"
            android:hint="Username"
            android:imeActionId="6"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="flagNoExtractUi"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/twenty_sp"

            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/pane_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/pane_username"
        android:layout_margin="@dimen/twenty_dp"
        android:background="@drawable/et_background"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/ten_dp"
            android:layout_marginRight="@dimen/ten_dp"
            android:src="@drawable/ic_key" />


        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fifty_dp"
            android:background="@android:color/transparent"
            android:hint="Password"
            android:imeActionId="6"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="flagNoExtractUi"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/twenty_sp" />

    </LinearLayout>

    <CheckBox
        android:id="@+id/chkbox_remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_remember"
        android:textColor="@color/white"
        android:layout_below="@+id/pane_password"
        android:layout_margin="@dimen/twenty_dp"
        android:textSize="@dimen/twenty_sp"
        />

    <LinearLayout
        android:id="@+id/lyt_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/twenty_dp"
        android:layout_marginTop="@dimen/thirty_Two_dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            style="@style/Base.TextAppearance.AppCompat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:background="@drawable/btn_hash"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/twenty_sp" />

        <Button
            android:id="@+id/btn_login"
            style="@style/Base.TextAppearance.AppCompat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_weight="1"
            android:background="@drawable/btn_white_enabled"
            android:text="@string/action_login"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/twenty_sp" />
    </LinearLayout>


</RelativeLayout>